use images for galleries

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -8,12 +8,19 @@
                 <br/>
                 <h4>Katrin Kharitonov</h4>
                 <p>
-                    <br> Paar, Neugeborenen & Familien<br> Lifestyle-Fotografin
+                    <br> Paar, Neugeborenen & Familien
+                    <br> Lifestyle-Fotografin
                     <br>
-                    <br> Buhlweg 7 76689 Karlsdorf-Neuthard<br>
-                    <br> T +49 (0)7251 322 63 52 E info@lebenpurfotografie.de
+                    <br> Buhlweg 7 76689 Karlsdorf-Neuthard
+                    <br>
+                    <br> T +49 (0)7251 322 63 52
+                    <br> E info@lebenpurfotografie.de
                 </p>
                 <p>Ich freue mich auf dich!</p>
+                <br>
+                <br>
+                <br>
+                <a routerLink="contact/impressum">Impressum</a>
             </div>
         </div>
         <div class="col-md-6">
