add blog link to the current page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,7 @@
             <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 link">
                 <a href="https://www.facebook.com/Leben-Pur-Fotografie-1793261230989815/" class="fa fa-facebook-square fa-2x"></a>
                 <a href="https://www.instagram.com/katrinkharitonov/" class="fa fa-instagram fa-2x"></a>
+                <a href="https://lebenpurblog.de/" class="fab fa-wordpress-simple fa-2x"></a>
             </div>
         </div>
     </div>
