--- a/src/app/components/left-right/left-right.component.html
+++ b/src/app/components/left-right/left-right.component.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="dots">
-        <i class="fa" aria-hidden="true" *ngFor="let c of content; let i = index" [ngClass]="{'fa-circle-o': activeContent !== i, 'fa-circle': activeContent === i, 'white': activeContent%2 }"
+        <i class="fa-circle" aria-hidden="true" *ngFor="let c of content; let i = index" [ngClass]="{'far': activeContent !== i, 'fas': activeContent === i, 'white': activeContent%2 }"
             (click)="activeContent = i"></i>
     </div>
 </div>
