--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -1,15 +1,10 @@
 .gallery-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.gallery-row {
-  display: flex;
-  max-width: 1152px;
-  flex-wrap: wrap;
-  margin-left: auto;
-  margin-right: auto;
+  column-count: 4;
+  -webkit-column-count: 4;
+  -moz-column-count: 4;
+  column-gap: 0px;
+  line-height: 10px;
+  margin: 10px 20px;
 }
 
 .horizontal-lg,
@@ -18,6 +13,8 @@
 .square {
   display: inline-block;
   position: relative;
+  width: 100%;
+  height: auto;
 }
 
 .horizontal-lg:after,
@@ -29,64 +26,51 @@
 }
 
 .horizontal-lg:after {
-  width: 1152px;
+  /* width: 1152px; */
   /* 3:2 ratio */
   padding-top: 67%;
 }
 
 .horizontal-sm:after {
-  width: 768px;
+  /* width: 768px; */
   padding-top: 67%;
 }
 
 .vertical:after {
-  width: 384px;
+  /* width: 384px; */
   /* 3:2 ratio? */
   padding-top: 148%;
 }
 
 .square:after {
-  width: 576px;
+  /* width: 576px; */
   padding-top: 100%;
 }
 
 
 /* Medium Devices, Desktops */
 
+@media only screen and (max-width: 1600px) {
+  .gallery-container {
+    column-count: 3;
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+  }
+}
+
 @media only screen and (max-width: 1200px) {
-  .horizontal-lg:after {
-    width: 968px;
-  }
-
-  .horizontal-sm:after {
-    width: 646px;
-  }
-
-  .vertical:after {
-    width: 322px;
-  }
-
-  .square:after {
-    width: 484px;
+  .gallery-container {
+    column-count: 2;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
   }
 }
 
 @media only screen and (max-width: 992px) {
-  .horizontal-lg:after {
-    width: 744px;
-  }
-
-  .horizontal-sm:after {
-    width: 496px;
-  }
-
-  .vertical:after {
-    width: 248px;
-    padding-top: 150%;
-  }
-
-  .square:after {
-    width: 377px;
+  .gallery-container {
+    column-count: 2;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
   }
 }
 
@@ -94,25 +78,11 @@
 /* Small Devices, Tablets */
 
 @media only screen and (max-width: 768px) {
-  .horizontal-lg:after {
-    width: 90vw;
-  }
-
-  .horizontal-sm:after {
-    width: 90vw;
-  }
-
-  .vertical:after {
-    width: 90vw;
-    padding-top: 150%;
-  }
-
-  .square:after {
-    width: 90vw;
-  }
-
-  .gallery-row {
-    flex-direction: column;
+  .gallery-container {
+    column-count: 1;
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    margin: 5px;
   }
 }
 
@@ -137,7 +107,7 @@
   background-position: right bottom;
   background-size: cover;
   background-repeat: no-repeat;
-  margin: 10px;
+  margin: 5px;
 }
 
 
